k8s/overlays/local/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gym-frontend-ingress
  namespace: gym
  annotations:
    managed-by: kustomize
spec:
  ingressClassName: traefik
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gym-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gym-backend-service
                port:
                  number: 8080
